--- a/.github/workflows/custom-go-action.yml
+++ b/.github/workflows/custom-go-action.yml
@@ -1,5 +1,5 @@
 ---
-name: golangci-lint
+name: custom-go-action
 on:
   push:
     paths:
@@ -7,7 +7,7 @@ on:
       - "go.mod"
       - "**.go"
       - "scripts/errcheck_excludes.txt"
-      - ".github/workflows/golangci-lint.yml"
+      - ".github/workflows/go-lint-tests.yml"
       - ".golangci.yml"
   pull_request:
 
@@ -33,6 +33,11 @@ jobs:
       - name: Checkout repo
         uses: actions/checkout@v2
 
+      - name: install Go
+        uses: actions/setup-go@0c52d547c9bc32b1aa3301fd7a9cb496313a4491 # v5.0.0
+        with:
+          go-version: 1.21.x
+          
       - name: Run my custom Go action
         uses: your-github-username/your-github-action-repo@main
         with:
