--- a/.github/workflows/go-lint-tests.yml
+++ b/.github/workflows/go-lint-tests.yml
@@ -7,11 +7,14 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v2
+    
     - name: Set up Go
       uses: actions/setup-go@v2
       with:
-        go-version: '^1.15'
+        go-version: '^1.16'
+
+    - name: Install golint
+      run: go install golang.org/x/lint/golint@latest
+    
     - name: Run golint
-      run: |
-        go get -u golang.org/x/lint/golint
-        golint ./...
+      run: golint ./...
